--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -162,7 +162,7 @@ endif()
 option(PLUGIN_ANALYSIS "Enable the support plugin for the analysis plugin" OFF)
 
 if(PLUGIN_ANALYSIS OR PLUGINS_ALL)
-    add_subdirectory(analysis_plugin)
+    add_subdirectory(analysis_support)
 endif()
 
 
